--- a/PaginaUHeroe/style.css
+++ b/PaginaUHeroe/style.css
@@ -138,6 +138,27 @@ form .field input[type="submit"]:active{
   font-size: 18.5px;
 }
 
+#botonCalcular {
+  margin: auto;
+  text-decoration: none;
+  color: #fff;
+  border: none;
+  border-radius: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 115px;
+  padding-right: 115px;
+  font-size: 20px;
+  font-weight: 500;
+  background: linear-gradient(-135deg, #FF1818, #FFC300);
+  transition: 0.3s;
+
+}
+
+#botonCalcular:active {
+  font-size: 18.5px;
+}
+
 body img {
   width: 220px;
   margin-top: 50px;
